public/css/app.css
a:hover {
    color: var(--primary);
}

.section,
.card,
.button,
.toast {
    border-radius: 0 !important;
}

/*****************************************/

body {
    font-size: 14px;
}

.button {
    --spacing: 4px;
    --button-color: light-dark(#c0c0c086, #4e4e4e7f);

    position: relative;
    border: none;
    font-family: var(--heading-font);
    font-size: 1.25em;
    font-weight: bold;
    background-color: var(--button-color);
    padding: 0 0.75em;

    &::before {
        content: "";
        transition-duration: 0.3s;
        position: absolute;
        top: calc(var(--spacing) * -1); bottom: calc(var(--spacing) * -1);
        left: 0; right: 0;
        border-block: calc(var(--spacing) / 2) solid var(--button-color);
    }

    &.accent-border {
        --border-color: var(--primary);

        &::before {
            border-color: var(--border-color);
        }
    }

    &.colored {

    }

    &.sleek,
    &.sleek:hover {
        background: none;
        color: var(--secondary) !important;
    }

    &.light-button{
        font-family: var(--heading-font);
        font-weight: normal;
        border: 2px solid var(--bg-lite2);
        background: none;
    }

    &.less-interesting{
        font-family: var(--heading-font);
        font-weight: normal;
        background-color: var(--bg-lite);
    }
}

table{
    width: 100%;
    border-spacing: 0;
}
thead th, tfoot th{
    border-top: 1px solid var(--secondary);
    border-bottom: 1px solid var(--secondary);
    text-align: left;
}

/**********************************************************************************
* * PAGES * *
***********************************************************************************/

/* Ordinarium */

.ordTile{
  text-align: center;
}
.ordTitleBox{
  --border-size: 3px;
  border-bottom: var(--border-size) solid var(--secondary);
  padding-bottom: calc(2 * var(--border-size));
  margin-bottom: calc(2 * var(--border-size));
}
.ordTitleBox *{
  margin: 0;
}

/* Set */

.settings{
  position: sticky; top: 0;
  background-color: var(--bg-lite2);
  z-index: 9;
  padding: 1em;
}
.settings h2{
  margin: 0;
}

.summary {
    & span:last-child{
        margin-left: 0.5em;
    }
    & ul {
        padding-left: 0;
        display: inline-block;
        list-style: none;
        vertical-align: top;
    }
}

.songMeta{
  margin: 0.75em 0 0;

  & > * {
    margin: 0;
  }
}
/* Modals */

.modal{
    display: none;
    position: fixed;
    top: 0; left: 0;
    width: 100vw; height: 100vh;
    overflow-y: scroll;
    padding: 2em 4em; box-sizing: border-box;
    z-index: 99;
    background-color: hsla(var(--bg1), 0.5);
    backdrop-filter: blur(10px);
    flex-direction: column;
    justify-content: start;
}
.modal.show{
    display: flex;
}

.scroll-list{
    overflow-y: scroll;
}

/* Songs */

.boldEm::first-letter{
  font-weight: bold;
  color: var(--secondary);
}

/**********************************************************************************
* * COMPONENTS * *
***********************************************************************************/

/* MassElements */

.massElemSection{
	position: relative;

    & h1,
    & h2,
    & h3,
    & h4,
    & h5,
    & h6 {
        text-align: center;
    }

    & * {
        transition-duration: 0.3s;
    }
}
.massElemSection:not(:last-of-type), hr{
    border-bottom: 3px solid var(--bg-lite2);
    border-top: none;
}
.massElemSection:not(:last-of-type){
  padding-bottom: 0.5em;
  margin: 0;
}
.massElemSection h2{
  font-size: 1.2em;
  color: var(--primary);
}

.lyrics{
	display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    column-gap: 2em;
}
.lyrics li{
	width: -moz-fit-content;
	width: fit-content;
	margin-bottom: 10px;

    &.lettered {
        list-style-type: none;

        & > .letter {
            position: absolute;
            margin-left: -1em;
        }
    }
}
.chorus{
  font-weight: bold;
}
.tabbed{
  display: block;
  margin-left: 1em;
}

.psalm{
	padding-left: 40px;
}
.psalm p:nth-child(odd){
	font-weight: bold;
}

.antyfona, .ksiadz{
    margin: 0;

    &.ksiadz{
        color: var(--secondary);
    }
    &.antyfona {
        position: relative;
        text-align: initial;

        & .wierni-container .melody {
            position: absolute;
            bottom: 0; left: 0;
            opacity: 0;
            background-color: var(--bg-lite);
        }

        &:hover .melody {
            opacity: 1;
            width: 100%;
            bottom: 100%;
        }
    }
}

.alternative, .alt_group{
	border: 3px solid var(--bg-lite2);
	border-radius: 15px;
	margin: 10px;
}
.alt_group{
	position: relative;
	border-left: none; border-top: none; border-bottom: none;
	margin-left: 0; margin-top: 0; margin-bottom: 0;
}
.alternative h4{
    color: var(--bg-lite2);
    margin: 0;
}
.alt_group h4{
	position: absolute;
	right: 10px; top: 0;
}
.alt_option{
	border-top: 2px dashed var(--bg-lite2);
	display: flex;
	flex-direction: column;
  padding: 0.5em;
}

.credo{
	width: -moz-fit-content;
	width: fit-content;
}
.credo tr:nth-child(odd){
	background-color: var(--bg-lite);
}

.notes {
    font-style: italic;
    text-align: center;
    margin-bottom: 1em;

    &.in-right-corner {
        text-align: right;
        position: absolute; right: 0; top: 0;
    }
}

.notes-and-lyrics-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 1em;

    & > * {
        width: 50%;
    }
}

@media screen and (max-width: 900px) {
    .notes-and-lyrics-container {
        flex-direction: column;

        & > * {
            width: auto;
        }
    }
}

/* ABC notation */

text {
    font-family: "EB Garamond";

    &[data-name="lyric"] {
        font-weight: normal;
    }
}

/* misc2 */

.massElemEditorElement{
    position: absolute;
    top: 0;
    z-index: 2;
}
.show-after-click{
    display: none;
}
.show-after-click.show{
    display: flex;
}
.massElemEraser{
    right: 0;
}
.massElemAdder{
    left: 0;
}

.list-element{
    position: relative;
    height: 2em;
}
.list-element .main{
    border: 2px solid transparent;
    user-select: none;
}
.list-element .hover{
    opacity: 0;
    z-index: -1;
    position: absolute;
    top: 1.25em; left: 50%; translate: -50% -5px;
    white-space: nowrap;
}
.list-element:hover .main{
    border-top: 2px solid var(--secondary);
    border-bottom: 2px solid var(--secondary);
}
.list-element:hover .hover{
    opacity: 1;
    z-index: 1;
    translate: -50% 0;
}

section{
    /* border-top: 3px solid var(--bg-lite); */
    /* border-bottom: 3px solid var(--bg-lite); */
    margin: 1em 0;
}
section>*:last-of-type{
    margin-bottom: 1em;
}

td {
    & ul, & ol {
        padding-left: 1em;
    }
    & pre, & ul, & ol {
        margin: 0;
    }
}

/*********************
 * MOBILE!!
 ****************/

@media screen and (max-width: 600px) {
  .vert-baseline {
    align-items: center;
  }

  textarea{
    width: 100%;
  }
}

/*********************
 * PRINT!!
 ****************/
@media print{
    header .titles h2,
    nav,
    footer .auth,
    button{
        display: none !important;
    }

    header, footer{
        background: var(--bg-lite);
        display: flex;
        color: var(--fg);
        padding: 0.5em 1em;
        width: auto;
        gap: 1em;
    }
    footer{
        justify-content: flex-end;
    }
}

